@@ -1,5 +1,12 @@
 2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>
 
+	Merged feature from trunk
+
+	* include/functions_visual_map.php: added links to services in the items in
+	the view of visualmap.
+
+2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>
+
 	Merged bugfix from trunk
 
 	* include/functions_visual_map.php: added lost safe_ouput in the extract
